Device Logging change with azure infa change, service and webui changes

--- a/src/webui/src/components/pages/devices/flyouts/deviceDetails/deviceDetails.module.scss
+++ b/src/webui/src/components/pages/devices/flyouts/deviceDetails/deviceDetails.module.scss
@@ -20,6 +20,7 @@
     .device-name { @include rem-fallback(font-size, 18px); }
     .device-simulated { @include rem-fallback(font-size, 10px); }
     .device-connected { @include rem-fallback(font-size, 14px); }
+    .device-log { @include rem-fallback(font-size, 14px); }
 
     .device-icon svg {
       @include rem-fallback(height, 72px);
